resources/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-size: 100%;
}
html {
    overflow: hidden;
    font-size: 17px;
    height: 100%;
    --bg-color: #eeeeee;
    --text-color: darkred;
    --shadow-color: #e2e2e2;
    --secondary-text: #666;
    --primary-text: #111;
    --tag-bg: darkred;
    --tag-text: white;
    --bg-gradient-1: rgba(0,0,0,0.0);
    --bg-gradient-2: rgba(0,0,0,0.01);
    --bg-overlay-1: rgba(255,255,255,0.005);
    --bg-overlay-2: rgba(255,255,255,0.0015);
    --bg-overlay-3: rgba(0,0,0,0.1);
}
.theme-dark {
    --bg-color: #222;
    --text-color: #e06060;
    --shadow-color: #111;
    --secondary-text: #999;
    --primary-text: #eee;
    --tag-bg: #8b0000;
    --tag-text: #eee;
    --bg-gradient-1: rgba(0,0,0,0.75);
    --bg-gradient-2: rgba(0,0,0,0.9);
    --bg-overlay-1: rgba(0,0,0,0.1);
    --bg-overlay-2: rgba(0,0,0,0.05);
    --bg-overlay-3: rgba(0,0,0,0.3);
}
@media (prefers-color-scheme: dark) {
    .theme-auto {
        --bg-color: #222;
        --text-color: #e06060;
        --shadow-color: #111;
        --secondary-text: #999;
        --primary-text: #eee;
        --tag-bg: #8b0000;
        --tag-text: #eee;
        --bg-gradient-1: rgba(0,0,0,0.75);
        --bg-gradient-2: rgba(0,0,0,0.9);
        --bg-overlay-1: rgba(0,0,0,0.1);
        --bg-overlay-2: rgba(0,0,0,0.05);
        --bg-overlay-3: rgba(0,0,0,0.3);
    }
}
body {
    height: 100%;
    overflow: hidden;
    background: linear-gradient(to right, var(--bg-gradient-1) 0%, var(--bg-gradient-2) 100%), linear-gradient(to bottom, var(--bg-gradient-1) 0%, var(--bg-gradient-2) 100%);
    display: grid;
    grid-template-rows: 6em 3em calc(100% - 12em) 3em;
    color: var(--primary-text);
}
select {
  background: transparent;
  color: var(--primary-text);
  border-radius: 0.2em;
  border: 1px solid var(--text-color);
}
header {
    display: grid;
    grid-template-columns: 30px calc(100% - 758px - 10em) 10em 728px;
    align-items: center;
}
h1,h2,h3,h4,h5 {
    text-decoration: none;
    font-weight: bold;
}
h1, h2, h3, h4, h5, p, li {
    padding-top: 0.25em;
    padding-bottom: 0.25em;
}
ul {
    padding-left: 1em;
}
h1 {
    font-size: 2em;
}
h2  {
    font-size: 1.75em;
}
h3  {
    font-size: 1.5em;
}
h4  {
    font-size: 1.25em;
}
table, tr, td {
  border-collapse: collapse;
}
table {
    width: auto;
}
td {
  border: 1px solid var(--primary-text);
  padding: 0.5em;
}
td:first-of-type {
  border-left: none;
}
td:last-of-type {
  border-right: none;
}
.page {
    box-shadow: 2px 2px 4px var(--shadow-color);
    max-width: 1250px;
    padding: 1em;
}
.tags {
    display: flex;
    flex-direction: row;
    gap: 0.5em;
    align-items: center;
    list-style: none;
}
.tags > li {
    background: var(--tag-bg);
    color: var(--tag-text);
    border-radius: 1em;
    padding: 0.25em;
    box-shadow: 2px 2px 4px var(--shadow-color);
}
.tags > li > a {
    color: var(--tag-text);
}
.background {
    background-color: var(--bg-color);
    color: var(--text-color);
    background-image: linear-gradient(to bottom, var(--bg-overlay-1) 0%, var(--bg-overlay-2) 25%, var(--bg-overlay-3) 100%);
}
a,
a:visited,
a:active,
a:focus,
a:hover {
    color: var(--text-color);
    text-decoration: none;
}
img {
    max-width: 100%;
}
nav > ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: row;
    gap: 0.5em;
}
nav > ul > li > a {
    border-bottom: 1px solid var(--text-color);
    border-radius: 0.15em;
}
main > ol {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    list-style-type: none;
    margin: 0;
    padding: 0;
    gap: 1em;
}
main {
    overflow-y: auto;
    overflow-x: hidden;
}
main > ol > li {
    box-shadow: 2px 2px 4px var(--shadow-color);
    border-radius: 0.1em;
}
time {
    color: var(--secondary-text);
    font-size: 0.85em;
    display: inline;
}
.views {
    color: var(--secondary-text);
    font-size: 0.85em;
}
main > aside {
    float: right;
    width: auto;
    max-width: 20%;
    overflow: hidden;
    margin-left: 1em;
    margin-bottom: 1em;
    box-shadow: 2px 2px 4px var(--shadow-color);
}
main > aside > picture > img {
    float: left;
    padding: 0.7em;
}
main > aside > p {
    padding: 0.2em;
}
th, td {
    text-align: left;
    padding: 0.35em 0.5em;
    border-bottom: 1px solid var(--shadow-color);
}
th {
    font-weight: bold;
    color: var(--text-color);
}
td:last-child, th:last-child {
    text-align: right;
}
.advertisement > a,
.advertisement > a > img {
    display: block;
}

